# md2pptx

./: README.md  md2pptx.py  pyproject.toml
tests/: test_md2pptx.py
